--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "electron": "electron ."
   },
   "dependencies": {
+    "@react-md/progress": "^5.1.6",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.16",
     "mapbox-gl": "^3.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-loading-indicators": "^1.0.0",
     "react-map-gl": "^7.1.9",
     "systeminformation": "^5.25.11"
   },
