--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-loader-spinner": "^6.1.6",
     "react-loading-indicators": "^1.0.0",
     "react-map-gl": "^7.1.9",
-    "systeminformation": "^5.25.11"
+    "socket.io-client": "^4.8.1",
+    "systeminformation": "^5.25.11",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
