--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-loading-indicators": "^1.0.0",
     "react-map-gl": "^7.1.9",
+    "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "systeminformation": "^5.25.11",
