--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "express": "^4.21.2",
     "mapbox-gl": "^3.9.4",
+    "opencv.js": "^1.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
