--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "opencv.js": "^1.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.1.6",
     "react-loading-indicators": "^1.0.0",
     "react-map-gl": "^7.1.9",
