--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-loading-indicators": "^1.0.0",
     "react-map-gl": "^7.1.9",
     "react-router-dom": "^7.3.0",
+    "react-style-normalizer": "^1.2.8",
     "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
