--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "electron": "electron ."
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.5.0",
     "@react-md/progress": "^5.1.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.16",
+    "@turf/turf": "^7.2.0",
     "express": "^4.21.2",
     "mapbox-gl": "^3.9.4",
+    "mdb-react-ui-kit": "^9.0.0",
     "opencv.js": "^1.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
