--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron": "electron ."
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.13.5",
     "@mapbox/mapbox-gl-draw": "^1.5.0",
     "@react-md/progress": "^5.1.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
