--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.16",
     "@turf/turf": "^7.2.0",
+    "chart.js": "^4.4.9",
+    "chartjs-plugin-zoom": "^2.2.0",
     "electron-notify": "^0.1.0",
     "express": "^4.21.2",
     "lottie-react": "^2.4.1",
@@ -28,6 +30,7 @@
     "mdb-react-ui-kit": "^9.0.0",
     "opencv.js": "^1.2.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -37,6 +40,7 @@
     "react-router-dom": "^7.3.0",
     "react-style-normalizer": "^1.2.8",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "systeminformation": "^5.25.11",
