--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@turf/turf": "^7.2.0",
     "chart.js": "^4.4.9",
     "chartjs-plugin-zoom": "^2.2.0",
+    "classnames": "^2.5.1",
     "electron-notify": "^0.1.0",
     "express": "^4.21.2",
     "lottie-react": "^2.4.1",
