--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.16",
+    "@tippyjs/react": "^4.2.6",
     "@turf/turf": "^7.2.0",
     "chart.js": "^4.4.9",
     "chartjs-plugin-zoom": "^2.2.0",
@@ -45,6 +46,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "systeminformation": "^5.25.11",
+    "tippy.js": "^6.3.7",
     "ws": "^8.18.0",
     "zustand": "^5.0.3"
   },
